src/test/ui/cfg/cfg-path-error.stderr
error: `cfg` predicate key must be an identifier
  --> $DIR/cfg-path-error.rs:3:16
   |
LL | #[cfg(any(foo, foo::bar))]
   |                ^^^^^^^^

error: `cfg` predicate key must be an identifier
  --> $DIR/cfg-path-error.rs:7:11
   |
LL | #[cfg(any(foo::bar, foo))]
   |           ^^^^^^^^

error: `cfg` predicate key must be an identifier
  --> $DIR/cfg-path-error.rs:11:16
   |
LL | #[cfg(all(foo, foo::bar))]
   |                ^^^^^^^^

error: `cfg` predicate key must be an identifier
  --> $DIR/cfg-path-error.rs:15:11
   |
LL | #[cfg(all(foo::bar, foo))]
   |           ^^^^^^^^

error: aborting due to 4 previous errors

